# koopa-luigi

./: .gitignore  LICENSE  Makefile  README.md  cpu.sh  gpu.sh  koopa.cfg  pyproject.toml  requirements_legacy.txt  requirements_modern.txt  run_legacy.sh  run_modern.sh  setup.py  setup_envs.sh  slurm_cpu.sh  slurm_gpu.sh
src/: __init__.py  __main__.py  argparse.py  cli.py  cli_args.py  postprocess.py  preflight.py  preprocess.py  segment.py  spots.py  util.py
tests/: test_alignment.py  test_preflight.py  test_util.py
